asset/css/doc.css
@import "normalize.css";
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Licorice&display=swap');

@font-face {
	font-family: 'icomoon';
	src:  url('../icon/fonts/icomoon.eot?nahhej');
	src:  url('../icon/fonts/icomoon.eot?nahhej#iefix') format('embedded-opentype'),
	url('../icon/fonts/icomoon.ttf?nahhej') format('truetype'),
	url('../icon/fonts/icomoon.woff?nahhej') format('woff'),
	url('../icon/fonts/icomoon.svg?nahhej#icomoon') format('svg');
}

/* Default global values / normalization */
body {
	font-family: Nunito, sans-serif;
	/*font-family: Calibri, sans-serif;*/
	font-size: 12px;
	background-color: gainsboro;
}

ul {
	margin: 0;
	/*padding: 0;*/
}

em {
	font-weight: bold;
	font-style: normal;
}


/* Page layout */
body {
	display: grid;
	grid-template-columns: 300px 10px 80%;
}

#toc {
	grid-column: 1;
	grid-row: 1;
	position: fixed;
	top: 0;
	width: 300px;
	overflow-x: hidden;
	overflow-y: scroll;
	/*z-index: -1;*/
	padding: 10px;
	margin-top: 40px;
}

#sep {
	grid-column: 2;
	grid-row: 1;
	background-color: gainsboro;
}

#content {
	grid-column: 3;
	grid-row: 1;
	padding-left: 20px;
	background-color: gainsboro;
}

#welcome {
	text-align: center;
	font-size: 20px;
	font-weight: bolder;
}


h1 {
	margin-left: 0em;
}

h2 {
	margin-left: 1em;
}

h3 {
	margin-left: 2em;
}

h4 {
	margin-left: 3em;
}

table, th, td {
	border: 1px solid black;
	border-spacing: 0;
}

th, td {
	padding: 3px;
}


/* Content layout */
section .hint {
	border-radius: 5px;
	border-left-style: solid;
	border-left-width: 3px;
	background-color: darkgray;
	margin: 2em;
	padding: 1em;
}

section .hint *:first-child {
	display: inline-block;
}

section .hint header:first-child {
	font-weight: bold;
}

section .hint::before {
	font-family: 'icomoon', sans-serif;
	position: relative;
	font-size: 2em;
	vertical-align: middle;
}

section .info {
	border-left-color: blue;
}
section .info::before {
	content: "\e901";
	color : blue;
}

section .success {
	border-left-color: green;
}
section .success::before {
	content: "\e900";
	color : green;
}
section .warn {
	border-left-color: orange;
}
section .warn::before {
	content: "\e903";
	color : orange;
}
section .danger {
	border-left-color: red;
}
section .danger::before {
	content: "\e902";
	color : red;
}


@media screen and (orientation: landscape) { /*and (min-width: 900px) {*/
	body {
		margin: 20px;
		/*margin: 0 20% 0 20%;*/
	}
}

